--- a/simple_frontend/style.css
+++ b/simple_frontend/style.css
@@ -8,10 +8,23 @@ html {
     border: 4px solid rgb(55, 113, 131);
     margin: 2em;
     padding: 2em;
-    border-radius: 12px;
+    border-radius: 1.5em;
+}
+ul {
+    padding-inline-start: 0;
 }
 
 li {
-    text-align: right;
+    text-align: center;
     list-style: none;
+}
+
+.link-button {
+    margin: 0.5em;
+    width: 60%;
+}
+
+li a {
+    text-decoration: none;
+    color: inherit;
 }
