--- a/simple_frontend/style.css
+++ b/simple_frontend/style.css
@@ -28,3 +28,11 @@ li a {
     text-decoration: none;
     color: inherit;
 }
+
+#daily-workout-body {
+    background-color: rgb(83, 168, 194);
+}
+
+#daily-workout-body .card {
+    background-color: white;
+}
